# evalutils

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  contributing.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  project.yml  pypi.yml
_modules/: index.html
_modules/evalutils/: annotations.html  evalutils.html  io.html  roc.html  scorers.html  stats.html  validators.html
_sources/: index.rst.txt  modules.rst.txt
docs/: Makefile  conf.py  contributing.rst  environment.yml  index.rst  installation.rst  make.bat  modules.rst  usage.rst
evalutils/: ROC.py  __init__.py  __main__.py  __version__.py  annotations.py  cli.py  evalutils.py  exceptions.py  io.py  roc.py  scorers.py  stats.py  utils.py  validators.py
evalutils/template/: cookiecutter.json
evalutils/template/hooks/: post_gen_project.py
evalutils/template/{{ cookiecutter.package_name }}/: Dockerfile  README.md  build.sh  evaluation.py.j2  export.bat  export.sh  requirements.txt  test.bat  test.sh
evalutils/template/{{ cookiecutter.package_name }}/ground-truth/: 1.0.000.000000.0.00.0.0000000000.0000.0000000000.000.mhd  1.0.000.000000.0.00.0.0000000000.0000.0000000000.000.zraw  1.2.276.0.28.3.0.14.4.0.20090213134050413.mhd  1.2.276.0.28.3.0.14.4.0.20090213134050413.zraw  reference.csv
evalutils/template/{{ cookiecutter.package_name }}/test/: 1.2.276.0.28.3.0.14.4.0.20090213134050413.mhd  1.2.276.0.28.3.0.14.4.0.20090213134050413.zraw
evalutils/templates/algorithm/: cookiecutter.json
evalutils/templates/algorithm/hooks/: post_gen_project.py
evalutils/templates/algorithm/{{ cookiecutter.package_name }}/: Dockerfile  README.md  build.sh  export.sh  process.py.j2  requirements.txt  test.bat  test.sh
evalutils/templates/algorithm/{{ cookiecutter.package_name }}/test/: candidates.csv  (+4 more)
evalutils/templates/container/: cookiecutter.json
evalutils/templates/container/hooks/: post_gen_project.py  pre_gen_project.py
evalutils/templates/container/{{ cookiecutter.package_name }}/: Dockerfile  README.md  process.py.j2  requirements.in
evalutils/templates/evaluation/: cookiecutter.json
evalutils/templates/evaluation/hooks/: post_gen_project.py  pre_gen_project.py
evalutils/templates/evaluation/{{ cookiecutter.package_name }}/: .dockerignore  Dockerfile  README.md  build.sh  evaluation.py.j2  export.sh  requirements.txt  test.sh
evalutils/templates/evaluator/: cookiecutter.json
evalutils/templates/evaluator/hooks/: post_gen_project.py  pre_gen_project.py
evalutils/templates/evaluator/{{ cookiecutter.package_name }}/: Dockerfile  evaluation.py.j2  test.bat  test.sh
evalutils/templates/processor/: cookiecutter.json
evalutils/templates/processor/hooks/: post_gen_project.py  pre_gen_project.py
evalutils/templates/processor/{{ cookiecutter.package_name }}/: Dockerfile  README.md  build.bat  build.sh  export.bat  export.sh  process.py.j2  test.sh
evalutils/templates/unified/{{ cookiecutter.package_name }}/: README.md
tests/: test_ROC.py  test_abbreviatedchoice.py  test_algorithm.py  test_annotations.py  test_classification_evaluation.py  test_detection_evaluation.py  test_evalutils.py  test_io.py  test_processor.py  test_roc.py  test_scorers.py  test_stats.py  test_templates.py  test_utils.py  test_validators.py
tests/resources/csv/: algorithm_result.csv
tests/resources/detection/reference/: reference.csv
tests/resources/detection/submission/: submission.csv
tests/resources/itk/: 1.0.000.000000.0.00.0.0000000000.0000.0000000000.000.mhd  1.0.000.000000.0.00.0.0000000000.0000.0000000000.000.zraw
tests/resources/json/: results.json  results_2d.json  results_classification.json  results_empty.json
tests/resources/nodules/: candidates.csv
tests/resources/points/: predictions.csv  reference.csv
tests/resources/submission/: submission.csv
(+20 files in other folders)
