[tool.poetry]
name = "evalutils"
version = "0.3.1"
description = "evalutils helps users create extensions for grand-challenge.org"
authors = ["James Meakin <evalutils@jmsmkn.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/comic/evalutils"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English",
]

[tool.poetry.scripts]
evalutils = "evalutils.__main__:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"  # Pandas requires py>=3.7.1
imageio = { version = "*", extras=["tifffile"] }
# Exclude 2.1.1.1 due to
# https://github.com/SimpleITK/SimpleITK/issues/1627
# and https://github.com/python-poetry/poetry/issues/2453
SimpleITK = ">=2.0,!=2.1.1.1"
cookiecutter = "*"
click = "*"
scipy = "*"
scikit-learn = "*"
numpy = [
  { version = "^1.21", python = "<3.8" },
  { version = "^1.22", python = ">=3.8,<3.10" }
]
pandas = "^1.3"
setuptools = { version = "*", python = "~3.7" }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-randomly = "*"
pytest-cov = "*"
sphinx = "*"
sphinx_autodoc_typehints = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["evalutils", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals -n auto --dist loadscope --durations=10"
markers = [
    "slow",
]
filterwarnings = [
    "error",
    "ignore:.*The default dtype for empty Series will be 'object' instead of 'float64' in a future version.*",
    "ignore:.*Use pandas.concat instead\\.:FutureWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{37, 38, 39}

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
commands =
    poetry install -v
    poetry run pytest --cov-branch --cov-report term-missing --cov=evalutils --basetemp={envtmpdir} {posargs}
"""
